# Public domain
# ex:syn=sh
#
# This is a BSDBuild configure script source. The final configure script is
# generated using BSDBuild's mkconfigure(1) utility. BSDBuild is freely
# available from: http://bsdbuild.hypertriton.com/.
#

PACKAGE("Agar")
VERSION("1.6.0")
RELEASE("Nullability Complete")

REGISTER_SECTION("Global Agar options:")
REGISTER("--with-memory-model=(S|M|L)",	"Select Agar memory model [auto]")
REGISTER("--with-float",		"Floating-point support [auto]")
REGISTER("--enable-<library>",		"Build libraries (gui|vg|math|dev|au) [all]")
REGISTER("--enable-shared",		"Build shared libraries [check]")
REGISTER("--enable-type-safety",	"Run-time type safety checks [no]")
REGISTER("--enable-debug",		"Debug build (implies type-safety) [no]")
REGISTER("--enable-legacy",		"Deprecated interfaces [yes]")
REGISTER("--enable-threads",		"Thread safety [check]")
REGISTER("--enable-warnings",		"Suggested compiler warnings [no]")
REGISTER("--with-pthreads[=PREFIX]",	"POSIX Threads support [check]")
REGISTER("--with-attributes",		"Compiler attributes and annotations [yes]")

REGISTER_SECTION("Options specific to CORE library:")
REGISTER("--enable-debug-core",		"Expensive AG_Object debugging [no]")
REGISTER("--enable-network",		"Network interface [check]")
REGISTER("--enable-web",		"Web application server [no]")
REGISTER("--with-db4[=PREFIX]",		"AG_Db: Berkeley DB backend [no]")
REGISTER("--with-mysql[=PREFIX]",	"AG_Db: MySQL backend [no]")
REGISTER("--with-iconv[=PREFIX]",	"Character set conversion [check]")
REGISTER("--with-z[=PREFIX]",		"zlib compression library [check]")

REGISTER_SECTION("Options specific to MATH library:")
REGISTER("--with-<mode>-fp",    	"Precision (single|double|quad) [double]")
REGISTER("--with-altivec",		"AltiVec-optimized routines [check]")
REGISTER("--with-altivec-inline",	"Inline Altivec-optimized routines [no]")
REGISTER("--with-sse",			"SSE-optimized routines [check]")
REGISTER("--with-sse-inline",		"Inline SSE-optimized routines [no]")
REGISTER("--with-sse[234]",		"SSE2 SSE3 SSE4 routines [check]")

REGISTER_SECTION("Options specific to AU library:")
REGISTER("--with-sndfile[=PREFIX]",	"Enable sndfile support [check]")
REGISTER("--with-portaudio[=PREFIX]",	"Enable portaudio driver [check]")

REGISTER_SECTION("Options specific to GUI library:")
REGISTER("--enable-debug-gui",		"Expensive GUI debugging [no]")
REGISTER("--with-freetype[=PREFIX]",	"Enable FreeType support [check]")
REGISTER("--with-fontconfig[=PREFIX]",	"Enable Fontconfig support [check]")
REGISTER("--with-gl[=PREFIX]",		"OpenGL rendering support [check]")
REGISTER("--with-jpeg[=PREFIX]",	"Built-in JPEG image support [check]")
REGISTER("--with-png[=PREFIX]",		"Built-in PNG image support [check]")
REGISTER("--with-x[=PREFIX]",		"Build with X windows support [check]")
REGISTER("--with-xinerama[=PREFIX]",	"Build with Xinerama support [check]")
REGISTER("--with-glx[=PREFIX]",		"Enable accelerated X driver [check]")
REGISTER("--with-sdl[=PREFIX]",		"Enable SDL 1.2 driver [check]")
REGISTER("--with-wgl",			"Enable MS Windows driver [check]")
REGISTER("--with-cocoa",		"Enable MacOS X Cocoa driver [check]")

DEFAULT_DIR(DATADIR, "${PREFIX}/share/agar")
DEFAULT_DIR(LOCALEDIR, "${DATADIR}/locale")
DEFAULT_DIR(TTFDIR, "${DATADIR}/fonts")
DEFAULT_DIR(INCLDIR, "${PREFIX}/include/agar")

if [ "${DATADIR}" = "NONE" ]; then
	HDEFINE(LOCALEDIR, "NONE")
	MDEFINE(LOCALEDIR, "NONE")
	HDEFINE(TTFDIR, "NONE")
	MDEFINE(TTFDIR, "NONE")
fi

echo '    _       _       _     ___'
echo '  / _ \   / _ \   / _ \  |  _ \'
echo ' | |_| | | (_| | | |_| | | |_) |'
echo ' |_| |_|  \__, | |_| |_| |_| |_|'
echo '          |___/                 '
	
if [ "${with_memory_model}" = '' ]; then
	case "${host}" in
	amd64-* | hppa64-* | ia64-* | mips64-* | ppc64*-* | sh64-* | sparc64-* | x86_64-*)
	    with_memory_model="L"
	    ;;
	c64 | c128 | geos | nes)
	    with_memory_model="S"
	    ;;
	*)
	    with_memory_model="M"
	    ;;
	esac
fi
case "${with_memory_model}" in
S* | s*)
	HDEFINE_UNQUOTED(AG_MODEL, "AG_SMALL")
	MDEFINE(MEMORY_MODEL, "SMALL")
	;;
M* | m*)
	HDEFINE_UNQUOTED(AG_MODEL, "AG_MEDIUM")
	MDEFINE(MEMORY_MODEL, "MEDIUM")
	;;
L* | l*)
	HDEFINE_UNQUOTED(AG_MODEL, "AG_LARGE")
	MDEFINE(MEMORY_MODEL, "LARGE")
	;;
*)
	echo "No such memory model: ${with_memory_model} (use: SMALL, MEDIUM or LARGE)"
	exit 1
esac
echo "                 v$VERSION for $host_machine ($MEMORY_MODEL)"
echo ""

# Require a C compiler.
REQUIRE(cc)

case "${host}" in
c64 | c128 | geos | nes)
	# Static, integer-only build using CC65.
	DISABLE(objc)
	with_attributes="no"
	enable_shared="no"
	with_float="no"
	echo "checking for byte order...little-endian (${host})"
	MDEFINE(_MK_BYTE_ORDER, "LE")
	HDEFINE(_MK_LITTLE_ENDIAN, "yes")
	HUNDEF(_MK_BIG_ENDIAN)
	;;
*-darwin*)
	# The native Cocoa driver requires Objective C.
	CHECK(objc)
	;;
*)
	DISABLE(objc)
	if [ "${HAVE_FLOAT}" = "yes" -a "${with_float}" = "no" ]; then
		echo "disabling floating-point support"
		MDEFINE(HAVE_FLOAT, "no")
		MDEFINE(HAVE_LONG_DOUBLE, "no")
		HUNDEF(HAVE_FLOAT)
		HUNDEF(HAVE_LONG_DOUBLE)
	fi
	if [ "${CROSS_COMPILING}" = "yes" ]; then
		if [ "${byte_order}" = "" ]; then
			echo "*"
			echo "* Cannot guess the byte order of ${host}."
			echo "* Please use --byte-order=LE or --byte-order=BE"
			echo "*"
			exit 1
		fi
		echo "checking for byte order...${byte_order} (given)"
	else
		CHECK(byte_order)
	fi
	;;
esac

# Force a static build if requested.
if [ "${enable_shared}" != "no" ]; then
	MDEFINE(LIB_SHARED, "Yes")
else
	MDEFINE(LIB_SHARED, "No")
fi

#
# Determine available C compiler attributes. We have to assume that the compiler
# used to build an Agar application on a given system will have at least the
# same attributes available to it as the compiler that was used to build the
# Agar library itself. If not, --without-attributes should be used.
#
if [ "${with_attributes}" != "no" ]; then
	CHECK(cc_attributes)
else
	DISABLE(cc_attributes)
fi
if [ "${with_attributes}" != 'no' ]; then
	HDEFINE(AG_USE_ATTRIBUTES, "yes")
else
	HUNDEF(AG_USE_ATTRIBUTES)
fi

CHECK(sys_types)
CHECK(sys_stat)
CHECK(stdlib_h)
CHECK(unistd_h)
CHECK(limits_h)
CHECK(float_h)
CHECK(math)
CHECK(math_c99)
CHECK(fdclose)
CHECK(getpwuid)
CHECK(getpwnam_r)
CHECK(getenv)
CHECK(getuid)
CHECK(strsep)
CHECK(asprintf)
CHECK(snprintf)
CHECK(vsnprintf)
CHECK(vasprintf)
CHECK(signal)
CHECK(setjmp)
CHECK(strtoll)
CHECK(strtold)
CHECK(dlopen)
CHECK(dyld)
CHECK(shl_load)
CHECK(gettimeofday)
CHECK(select)
CHECK(glob)
CHECK(getopt)
CHECK(execvp)
CHECK(clock_gettime)
CHECK(clock_win32)
CHECK(nanosleep)
CHECK(kqueue)
CHECK(timerfd)
CHECK(csidl)
CHECK(xbox)

# C compiler options
C_DEFINE(_AGAR_INTERNAL)
C_DEFINE(_DEFAULT_SOURCE)
C_DEFINE(_BSD_SOURCE)
C_NO_SECURE_WARNINGS()

if [ "${enable_warnings}" = 'yes' ]; then
	C_OPTION(-Wall)
	C_OPTION(-Werror)
	C_OPTION(-Wmissing-prototypes)
	C_OPTION(-Wno-switch)
fi

if [ "${enable_debug}" = 'yes' ]; then
	HDEFINE(AG_DEBUG, "yes")
	HDEFINE(AG_TYPE_SAFETY, "yes")
	MDEFINE(CFLAGS, "${CFLAGS} -g")
else
	HUNDEF(AG_DEBUG)
	if [ "${enable_type_safety}" = 'yes' ]; then
		HDEFINE(AG_TYPE_SAFETY, "yes")
	else
		HUNDEF(AG_TYPE_SAFETY)
	fi
fi

if [ "${enable_debug_core}" = 'yes' ]; then
	HDEFINE(AG_DEBUG_CORE, "yes")
else
	HUNDEF(AG_DEBUG_CORE)
fi
if [ "${enable_debug_gui}" = 'yes' ]; then
	HDEFINE(AG_DEBUG_GUI, "yes")
else
	HUNDEF(AG_DEBUG_GUI)
fi
if [ "${enable_legacy}" != 'no' ]; then
	HDEFINE(AG_LEGACY, "yes")
else
	HUNDEF(AG_LEGACY)
fi


#
# Options specific to the Agar-GUI library.
#
if [ "${enable_gui}" != 'no' ]; then
	HDEFINE(ENABLE_GUI, "yes")
	MDEFINE(ENABLE_GUI_LIBS, "-L../gui -lag_gui")
	MDEFINE(SUBDIR_gui, "gui")

	# Enable SDL support if the SDL library is found.
	if [ "${with_sdl}" != 'no' ]; then
		CHECK(sdl, 1.2.0, ${prefix_sdl})
		if [ "${HAVE_SDL}" != 'yes' ]; then
			if [ "${with_sdl}" = 'yes' ]; then
				echo "*"
				echo "* --with-sdl was requested, but the SDL "
				echo "* library was not found."
				echo "*"
				exit 1
			fi
			DISABLE(sdl)
		fi
	else
		DISABLE(sdl)
	fi

	# Enable OpenGL support if an OpenGL library is found.
	if [ "${with_gl}" != 'no' ]; then
		CHECK(opengl, 0, ${prefix_gl})
		if [ "${HAVE_OPENGL}" = 'yes' ]; then
			MDEFINE(SDL_CFLAGS, "$SDL_CFLAGS $OPENGL_CFLAGS")
		else
			if [ "${with_gl}" = 'yes' ]; then
				echo "*"
				echo "* --with-gl was requested, but no OpenGL"
				echo "* library was found."
				echo "*"
				exit 1
			fi
			DISABLE(opengl)
		fi
	else
		DISABLE(opengl)
	fi
	
	# Enable X Windows support if Xlib is found.
	if [ "${with_x}" != 'no' ]; then
		CHECK(x11, 0, ${prefix_x})
		if [ "${HAVE_X11}" != 'yes' ]; then
			if [ "${with_x}" = 'yes' ]; then
				echo "*"
				echo "* --with-x was requested, but Xlib "
				echo "* was not found."
				echo "*"
				exit 1
			else
				DISABLE(x11)
			fi
		fi
		if [ "${with_xinerama}" != 'no' ]; then
			CHECK(xinerama, 0, ${prefix_xinerama})
			if [ "${HAVE_XINERAMA}" != 'yes' ]; then
				if [ "${with_xinerama}" = 'yes' ]; then
					echo "*"
					echo "* --with-xinerama was requested, but the "
					echo "* Xinerama extension was not found."
					echo "*"
					exit 1
				fi
				DISABLE(xinerama)
			fi
		else
			DISABLE(xinerama)
		fi
	else
		DISABLE(x11)
		DISABLE(xinerama)
	fi
	
	# Enable MacOS X / Cocoa support if Cocoa is found.
	if [ "${with_cocoa}" != 'no' ]; then
		CHECK(cocoa, 0)
		if [ "${HAVE_COCOA}" != 'yes' ]; then
			if [ "${with_cocoa}" = 'yes' ]; then
				echo "*"
				echo "* --with-cocoa was requested, but the "
				echo "* Cocoa framework was not found."
				echo "*"
				exit 1
			fi
			DISABLE(cocoa)
		fi
	else
		DISABLE(cocoa)
	fi

	#
	# Platform-specific OpenGL APIs
	#
	if [ "${HAVE_OPENGL}" = 'yes' ]; then
		# Enable GLX support if the GLX library is found.
		if [ "${with_glx}" != 'no' ]; then
			CHECK(glx, 1.4, ${prefix_glx})
			if [ "${HAVE_GLX}" != 'yes' ]; then
				if [ "${with_glx}" = 'yes' ]; then
					echo "*"
					echo "* --with-glx was requested, but no"
					echo "* compatible GLX library was found."
					echo "*"
					exit 1
				fi
				DISABLE(glx)
			fi
		else
			DISABLE(glx)
		fi
		
		# Enable WGL support on Windows.
		if [ "${with_wgl}" != 'no' ]; then
			CHECK(wgl, 0)
			if [ "${HAVE_WGL}" != 'yes' ]; then
				if [ "${with_wgl}" = 'yes' ]; then
					echo "*"
					echo "* --with-wgl was requested, but the"
					echo "* WGL test has failed."
					echo "*"
					exit 1
				fi
				DISABLE(wgl)
			fi
		else
			DISABLE(wgl)
		fi
	else
		DISABLE(glx)
		DISABLE(wgl)
	fi
	
	# Enable Freetype support if the Freetype library is found. Otherwise
	# fall back to the bitmap font engine.
	if [ "${with_freetype}" != 'no' ]; then
		CHECK(freetype, 7.0.1, ${prefix_freetype})
		if [ "${HAVE_FREETYPE}" != 'yes' ]; then
			echo "*"
			echo "* The FreeType library was not found, aborting!"
			echo "*"
			echo "* Agar needs FreeType to display vector fonts"
			echo "* (http://www.freetype.org/)."
			echo "*"
			echo "* If you really want to use Agar's built-in"
			echo "* monospace bitmap font engine (not recommended),"
			echo "* please use: ./configure --without-freetype"
			echo "*"
			exit 1
		fi
	else
		DISABLE(freetype)
	fi
	
	# Use fontconfig if available.
	if [ "${with_fontconfig}" != 'no' ]; then
		CHECK(fontconfig, 2.6.0, ${prefix_fontconfig})
	else
		DISABLE(fontconfig)
	fi
	
	# Enable JPEG format support if libjpeg is found.
	if [ "${with_jpeg}" != 'no' ]; then
		CHECK(jpeg, 0, ${prefix_jpeg})
		if [ "${HAVE_JPEG}" != 'yes' ]; then
			if [ "${with_jpeg}" = 'yes' ]; then
				echo "*"
				echo "* --with-jpeg was requested, but libjpeg"
				echo "* was not found."
				echo "*"
				exit 1
			fi
			DISABLE(jpeg)
		fi
	else
		DISABLE(jpeg)
	fi
	
	# Enable PNG format support if libpng is found.
	if [ "${with_png}" != 'no' ]; then
		CHECK(png, 1.2.49, ${prefix_png})
		if [ "${HAVE_PNG}" != 'yes' ]; then
			if [ "${with_png}" = 'yes' ]; then
				echo "*"
				echo "* --with-png was requested, but libpng"
				echo "* was not found."
				echo "*"
				exit 1
			fi
			DISABLE(png)
		fi
	else
		DISABLE(png)
	fi

else
	HUNDEF(ENABLE_GUI)
	MDEFINE(ENABLE_GUI_LIBS, "")
	MDEFINE(SUBDIR_gui, "")

	DISABLE(sdl)
	DISABLE(x11)
	DISABLE(xinerama)
	DISABLE(cocoa)
	DISABLE(opengl)
	DISABLE(glx)
	DISABLE(wgl)
	DISABLE(freetype)
	DISABLE(fontconfig)
	DISABLE(jpeg)
	DISABLE(png)
fi

# Enable network interface unless requested otherwise.
if [ "${enable_network}" != 'no' ]; then
	CHECK(getaddrinfo)
	CHECK(siocgifconf)
	CHECK(sockopts)
	CHECK(winsock)
	MDEFINE(HAVE_NETWORK, "yes")
	HDEFINE(AG_NETWORK, "yes")
else
	DISABLE(getaddrinfo)
	DISABLE(siocgifconf)
	DISABLE(sockopts)
	DISABLE(winsock)
	MDEFINE(HAVE_NETWORK, "no")
	HUNDEF(AG_NETWORK)
fi

# Enable web application server if requested
if [ "${enable_web}" = 'yes' ]; then
	CHECK(zlib, 0, ${prefix_z})
	CHECK_HEADER(sys/uio.h)
	CHECK_HEADER(sys/param.h)
	MDEFINE(HAVE_WEB, "yes")
	HDEFINE(AG_WEB, "yes")
else
	DISABLE(zlib);
	HUNDEF(HAVE_SYS_UIO_H)
	HUNDEF(HAVE_SYS_PARAM_H)
	MDEFINE(HAVE_WEB, "no")
	HUNDEF(AG_WEB)
fi

# Enable Berkeley DB backend for AG_Db if available.
if [ "${with_db4}" = 'yes' ]; then
	CHECK(db4, 0, ${prefix_db4})
	if [ "${HAVE_DB4}" != 'yes' ]; then
		if [ "${with_db4}" = 'yes' ]; then
			echo "*"
			echo "* --with-db4 was requested, but DB4 missing"
			echo "*"
			exit 1
		else
			DISABLE(db4)
		fi
	fi
else
	DISABLE(db4)
fi

# Enable MySQL backend for AG_Db if requested.
if [ "${with_mysql}" = 'yes' ]; then
	CHECK(mysql, 5.5.8, ${prefix_mysql})
	if [ "${HAVE_MYSQL}" != 'yes' ]; then
		if [ "${with_mysql}" = 'yes' ]; then
			echo "*"
			echo "* --with-mysql was requested, but libmysqlclient"
			echo "* was not found."
			echo "*"
			exit 1
		fi
		DISABLE(mysql)
	fi
else
	DISABLE(mysql)
fi

# Enable threads support if POSIX threads are available.
if [ "${enable_threads}" != 'no' ]; then
	CHECK(pthreads, 0, ${prefix_pthreads})

	if [ "${HAVE_PTHREADS}" = 'yes' ]; then
		if [ "${HAVE_PTHREADS_XOPEN}" = 'no' ]; then
		if [ "${HAVE_PTHREAD_MUTEX_RECURSIVE}" = 'no' ]; then
		if [ "${HAVE_PTHREAD_MUTEX_RECURSIVE_NP}" = 'no' ]; then
			if [ "${enable_threads}" = 'yes' ]; then
				echo "*"
				echo "* --enable-threads was given, but your"
				echo "* pthreads library seems to lack support"
				echo "* for recursive mutexes."
				echo "*"
				exit 1
			fi
			HUNDEF(AG_THREADS)
		fi
		fi
		fi
		HDEFINE(AG_THREADS, "yes")
	else
		if [ "${enable_threads}" = 'yes' ]; then
			echo "*"
			echo "* --enable-threads was given, but no pthreads"
			echo "* library was found on your system."
			echo "*"
			exit 1
		fi
		HUNDEF(AG_THREADS)
	fi
else
	DISABLE(pthreads)

	HUNDEF(AG_THREADS)

	if [ "${enable_warnings}" = 'yes' ]; then
		#
		# Lock macros expand to no-ops when compiled !AG_THREADS,
		# which may result in unused variables.
		#
		C_OPTION(-Wno-unused)
	fi
fi

# Enable NLS if requested explicitely.
if [ "${enable_nls}" = 'yes' ]; then
	CHECK(iconv, 0, ${prefix_iconv})
	CHECK(gettext, 0, ${prefix_gettext})
	if [ "${HAVE_GETTEXT}" != 'yes' ]; then
		echo "*"
		echo "* --enable-nls was given but gettext was not found."
		echo "*"
		exit 1
	fi
else
	DISABLE(iconv)
	DISABLE(gettext)
fi

#
# Options specific to the Agar-Math library
#
if [ "${enable_math}" != 'no' ]; then
	HDEFINE(ENABLE_MATH, "yes")
	MDEFINE(SUBDIR_math, "math")
else
	HUNDEF(ENABLE_MATH)
	MDEFINE(SUBDIR_math, "")
fi

# Enable AltiVec optimizations if compiler supports AltiVec.
if [ "${with_altivec}" != 'no' ]; then
	CHECK(altivec)
	if [ "${HAVE_ALTIVEC}" != 'yes' ]; then
		if [ "${with_altivec}" = 'yes' ]; then
			echo "*"
			echo "* --with-altivec was requested, but "
			echo "* AltiVec is not supported by compiler"
			echo "*"
			exit 1
		else
			DISABLE(altivec)
			HUNDEF(INLINE_ALTIVEC)
		fi
	else
		if [ "${with_altivec_inline}" = 'yes' ]; then
			HDEFINE(INLINE_ALTIVEC, "yes")
		else
			HUNDEF(INLINE_ALTIVEC)
		fi
	fi
else
	DISABLE(altivec)
	HUNDEF(INLINE_ALTIVEC)
fi

#
# Enable SSE optimizations if compiler supports intrinsics. Note that the
# library performs a CPU check, so enabling SSE will not break the build
# on non-SSE machines (unless --with-sse-inline is used, in which case
# the resulting build will be SSE-dependent).
#
if [ "${with_sse}" != 'no' ]; then
	CHECK(sse)
	if [ "${HAVE_SSE}" != 'yes' ]; then
		if [ "${with_sse}" = 'yes' ]; then
			echo "*"
			echo "* --with-sse was requested, but SSE "
			echo "* intrinsics not supported by compiler"
			echo "*"
			exit 1
		fi
		DISABLE(sse)
	else
		if [ "${with_sse_inline}" = 'yes' ]; then
			HDEFINE(INLINE_SSE, "yes")
		else
			HUNDEF(INLINE_SSE)
		fi
		if [ "${with_sse2}" = 'no' ]; then
			HUNDEF(HAVE_SSE2)
		fi
		if [ "${with_sse3}" = 'no' ]; then
			HUNDEF(HAVE_SSE3)
		fi
	fi
else
	DISABLE(sse)
fi

# Specify floating-point precision to use.
if [ "${with_single_fp}" = 'yes' ]; then
	if [ "${HAVE_MATH_C99}" != 'yes' ]; then
		echo "*"
		echo "* --with-single-fp was requested, but your compiler does"
		echo "* not support the C99 math routines (sinf(), etc)."
		echo "*"
		exit 1
	fi
	HDEFINE(SINGLE_PRECISION, "yes")
else
	HUNDEF(SINGLE_PRECISION)
fi
if [ "${with_double_fp}" != 'no' ]; then
	HDEFINE(DOUBLE_PRECISION, "yes")
else
	HUNDEF(DOUBLE_PRECISION)
fi
if [ "${with_quad_fp}" = 'yes' ]; then
	if [ "${HAVE_LONG_DOUBLE}" != 'yes' ]; then
		echo "*"
		echo "* --with-quad-fp was requested, but your compiler"
		echo "* does not support the C99 long double type."
		echo "*"
		exit 1
	fi
	if [ "${HAVE_MATH_C99}" != 'yes' ]; then
		echo "*"
		echo "* --with-quad-fp was requested, but the C99 math"
		echo "* routines (sinl(), etc.) are not available."
		echo "*"
		exit 1
	fi
	HDEFINE(QUAD_PRECISION, "yes")
else
	HUNDEF(QUAD_PRECISION)
fi

#
# Options specific to the Agar-VG library
#
if [ "${enable_vg}" != 'no' -a "${enable_gui}" != 'no' ]; then
	HDEFINE(ENABLE_VG, "yes")
	MDEFINE(SUBDIR_vg, "vg")
else
	HUNDEF(ENABLE_VG)
	MDEFINE(SUBDIR_vg, "")
fi

#
# Options specific to the Agar-DEV library
#
if [ "${enable_dev}" != 'no' -a "${enable_gui}" != 'no' ]; then
	HDEFINE(ENABLE_DEV, "yes")
	MDEFINE(SUBDIR_dev, "dev")
else
	HUNDEF(ENABLE_DEV)
	MDEFINE(SUBDIR_dev, "")
fi

#
# Options specific to the Agar-AU library
#
if [ "${enable_au}" != 'no' -a "${enable_audio}" != 'no' ]; then
	CHECK(sndfile, 1.0.21, ${prefix_sndfile})
	if [ "${HAVE_SNDFILE}" = 'yes' ]; then
		HDEFINE(ENABLE_AU, "yes")
		MDEFINE(SUBDIR_au, "au")
		CHECK(portaudio, 19.0, ${prefix_portaudio})
	else
		if [ "${enable_au}" = 'yes' -o "${enable_audio}" = 'yes' ]; then
			echo "*"
			echo "* --enable-au was requested, but the sndfile library"
			echo "* (required) is not installed."
			echo "*"
			exit 1
		fi
		DISABLE(sndfile)
		DISABLE(portaudio)

		MDEFINE(SUBDIR_au, "")
		HUNDEF(ENABLE_AU)
	fi
else
	DISABLE(sndfile)
	DISABLE(portaudio)

	MDEFINE(SUBDIR_au, "")
	HUNDEF(ENABLE_AU)
fi

#
# Conditionally compiled sources in Agar-Core
#
MDEFINE(SRCS_CORE, "")
if [ "${HAVE_SNPRINTF}" != 'yes' ]; then
	MAPPEND(SRCS_CORE, "snprintf.c")
fi
if [ "${HAVE_CLOCK_WIN32}" = 'yes' ]; then
	MAPPEND(SRCS_CORE, "time_win32.c")
fi
if [ "${HAVE_CLOCK_GETTIME}" = 'yes' ]; then
	if [ "${HAVE_NANOSLEEP}" = 'yes' ]; then
		MAPPEND(SRCS_CORE, "time_posix.c")
	fi
	if [ "${HAVE_PTHREADS}" = 'yes' ]; then
		MAPPEND(SRCS_CORE, "time_renderer.c")
	fi
fi
if [ "${HAVE_GETTIMEOFDAY}" = 'yes' ]; then
	if [ "${HAVE_SELECT}" = 'yes' ]; then
		MAPPEND(SRCS_CORE, "time_gettimeofday.c")
	fi
fi
if [ "${HAVE_DB4}" = 'yes' ]; then
	MAPPEND(SRCS_CORE, "db_bdb.c")
fi
if [ "${HAVE_MYSQL}" = 'yes' ]; then
	MAPPEND(SRCS_CORE, "db_mysql.c")
fi
if [ "${HAVE_NETWORK}" = 'yes' ]; then
	MAPPEND(SRCS_CORE, "net.c net_dummy.c")
	if [ "${HAVE_WINSOCK1}" = 'yes' ]; then
		MAPPEND(SRCS_CORE, "net_winsock1.c")
	fi
	if [ "${HAVE_WINSOCK2}" = 'yes' ]; then
		MAPPEND(SRCS_CORE, "net_winsock2.c")
	fi
	if [ "${HAVE_GETADDRINFO}" = 'yes' ]; then
		MAPPEND(SRCS_CORE, "net_bsd.c")
	fi
fi
if [ "${HAVE_GETPWUID}" = 'yes' ]; then
	MAPPEND(SRCS_CORE, "user_posix.c")
fi
if [ "${HAVE_XBOX}" = 'yes' ]; then
	MAPPEND(SRCS_CORE, "user_xbox.c xbox.c")
fi
if [ "${HAVE_CSIDL}" = 'yes' ]; then
	MAPPEND(SRCS_CORE, "user_win32.c")
fi
if [ "${HAVE_WEB}" = 'yes' ]; then
	MAPPEND(SRCS_CORE, "web.c web_auth.c web_var.c")
fi

#
# Conditionally compiled sources in Agar-GUI
#
MDEFINE(SRCS_GUI, "")
if [ "${HAVE_SDL}" = 'yes' ]; then
	MAPPEND(SRCS_GUI, "drv_sdl_common.c drv_sdlfb.c")
	if [ "${HAVE_OPENGL}" = 'yes' ]; then
		MAPPEND(SRCS_GUI, "drv_sdlgl.c")
	fi
fi
if [ "${HAVE_OPENGL}" = 'yes' ]; then
	MAPPEND(SRCS_GUI, "drv_gl_common.c")
	if [ "${HAVE_GLX}" = 'yes' ]; then
		MAPPEND(SRCS_GUI, "drv_glx.c")
	fi
	if [ "${HAVE_WGL}" = 'yes' ]; then
		MAPPEND(SRCS_GUI, "drv_wgl.c")
	fi
fi
if [ "${HAVE_COCOA}" = 'yes' ]; then
	MAPPEND(SRCS_GUI, "drv_cocoa.m")
fi

#
# Conditionally compiled sources in Agar-AU
#
MDEFINE(SRCS_AU, "")
if [ "${AG_THREADS}" = 'yes' ]; then
	if [ "${HAVE_SNDFILE}" = 'yes' ]; then
		MAPPEND(SRCS_AU, "au_dev_file.c")
	fi
	if [ "${HAVE_PORTAUDIO}" = 'yes' ]; then
		MAPPEND(SRCS_AU, "au_dev_pa.c")
	fi
fi

# Set up configure script output
C_INCPREP($BLD/include/agar)
C_INCDIR($BLD/include)
C_INCDIR_CONFIG($BLD/include/agar/config)

#
# Generate the "agar-config" scripts and pkg-config pc(5) modules.
#
CONFIG_SCRIPT(agar-config,\
	"-I${INCLDIR} ${SDL_CFLAGS} ${FREETYPE_CFLAGS} ${FONTCONFIG_CFLAGS} \
	 ${OPENGL_CFLAGS} ${X11_CFLAGS} ${GLX_CFLAGS} ${XINERAMA_CFLAGS} \
	 ${COCOA_CFLAGS} ${MATH_CFLAGS} ${PNG_CFLAGS} ${PTHREADS_CFLAGS} \
	 ${DB4_CFLAGS} ${MYSQL_CFLAGS} ${GETTEXT_CFLAGS} ${DSO_CFLAGS} \
	 ${CLOCK_CFLAGS} ${UIM_CFLAGS} ${ICONV_CFLAGS} ${ZLIB_CFLAGS}",\
	"-L${LIBDIR} -lag_gui -lag_core ${SDL_LIBS} ${FREETYPE_LIBS} \
	 ${FONTCONFIG_LIBS} ${OPENGL_LIBS} ${X11_LIBS} ${XINERAMA_LIBS} \
	 ${COCOA_LIBS} ${MATH_LIBS} ${JPEG_LIBS} ${PNG_LIBS} ${PTHREADS_LIBS} \
	 ${DB4_LIBS} ${MYSQL_LIBS} ${GETTEXT_LIBS} ${DSO_LIBS} ${CLOCK_LIBS} \
	 ${UIM_LIBS} ${ICONV_LIBS} ${ZLIB_LIBS}")

PKGCONFIG_MODULE(agar, "Agar cross-platform GUI toolkit", \
	"${X11_PC} ${SDL_PC} ${FREETYPE_PC} ${FONTCONFIG_PC} ${OPENGL_PC} \
	 ${XINERAMA_PC} ${JPEG_PC} ${PNG_PC} ${UIM_PC}", \
	"", \
	"-I\${includedir}/agar ${COCOA_CFLAGS} ${MATH_CFLAGS} \
	 ${PTHREADS_CFLAGS} ${DB4_CFLAGS} ${MYSQL_CFLAGS} ${GETTEXT_CFLAGS} \
	 ${DSO_CFLAGS} ${CLOCK_CFLAGS} ${ZLIB_CFLAGS}", \
	"-L\${libdir} -lag_gui -lag_core", \
	"-lag_gui -lag_core ${COCOA_LIBS} ${MATH_LIBS} ${PTHREADS_LIBS} \
	 ${DB4_LIBS} ${MYSQL_LIBS} ${GETTEXT_LIBS} ${DSO_LIBS} ${CLOCK_LIBS} \
	 ${ICONV_LIBS} ${ZLIB_LIBS}")

CONFIG_SCRIPT(agar-core-config,\
	"-I${INCLDIR} ${GETTEXT_CFLAGS} ${DSO_CFLAGS} \
	 ${CLOCK_CFLAGS} ${ZLIB_CFLAGS} ${ICONV_CFLAGS} ${ZLIB_CFLAGS}",\
	"-L${LIBDIR} -lag_core ${MATH_LIBS} ${PTHREADS_LIBS} ${DB4_LIBS} \
	 ${MYSQL_LIBS} ${GETTEXT_LIBS} ${DSO_LIBS} ${CLOCK_LIBS} ${ICONV_LIBS} \
	 ${ZLIB_LIBS}")
PKGCONFIG_MODULE(agar-core, "Agar object system and base library", "", "", \
	"-I\${includedir}/agar ${PTHREADS_XOPEN_CFLAGS} ${ALTIVEC_CHECK_CFLAGS} \
	 ${GETTEXT_CFLAGS} ${DSO_CFLAGS} ${DB4_CFLAGS} ${MYSQL_CFLAGS} \
	 ${CLOCK_CFLAGS} ${ZLIB_CFLAGS}", \
	"-L\${libdir} -lag_core", \
	"-lag_core ${PTHREADS_XOPEN_LIBS} ${GETTEXT_LIBS} ${DSO_LIBS} \
	 ${DB4_LIBS} ${MYSQL_LIBS} ${CLOCK_LIBS} ${WINSOCK1_LIBS} \
	 ${WINSOCK2_LIBS} ${ZLIB_LIBS}")

CONFIG_SCRIPT(agar-dev-config, "-I${INCLDIR}", "-L${LIBDIR} -lag_dev")
PKGCONFIG_MODULE(agar-dev, "Agar interface builder and developer tools", \
	"agar", "", \
	"-I\${includedir}/agar", "-L\${libdir} -lag_dev", "-lag_dev")

CONFIG_SCRIPT(agar-math-config,\
	"-I${INCLDIR} ${MATH_CFLAGS} ${ALTIVEC_CFLAGS} \
	${SSE_CFLAGS} ${SSE2_CFLAGS} ${SSE3_CFLAGS} ${MATH_CFLAGS}", \
	"-L${LIBDIR} -lag_math ${MATH_LIBS}")

if [ "${enable_gui}" != 'no' ]; then
	AGAR_MATH_REQUIRES="agar"
else
	AGAR_MATH_REQUIRES="agar-core"
fi
PKGCONFIG_MODULE(agar-math, "Agar math library", "${AGAR_MATH_REQUIRES}",\
	"", \
	"-I\${includedir}/agar ${ALTIVEC_CFLAGS} ${SSE_CFLAGS} ${SSE2_CFLAGS} \
	 ${SSE3_CFLAGS} ${MATH_CFLAGS}", \
	"-L\${libdir} -lag_math ${MATH_LIBS}", \
	"-lag_math ${MATH_LIBS}")

CONFIG_SCRIPT(agar-vg-config,\
	"-I${INCLDIR}", "-L${LIBDIR} -lag_vg")
PKGCONFIG_MODULE(agar-vg, "Agar vector graphics library", "agar", "", \
	"-I\${includedir}/agar ${MATH_CFLAGS}", \
	"-L\${libdir} -lag_vg ${MATH_LIBS}", \
	"-lag_vg ${MATH_LIBS}")

CONFIG_SCRIPT(agar-au-config,\
	"-I${INCLDIR} ${PORTAUDIO_CFLAGS} ${SNDFILE_CFLAGS}",\
	"-L${LIBDIR} -lag_au ${PORTAUDIO_LIBS} ${SNDFILE_LIBS}")
PKGCONFIG_MODULE(agar-au, "Agar audio library", \
	"agar ${PORTAUDIO_PC} ${SNDFILE_PC}", "", \
	"-I\${includedir}/agar", \
	"-L\${libdir} -lag_au", \
	"-lag_au ${MATH_LIBS}")

